<resources>
    <string name="app_name">QRBookAPP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre:</string>
    <string name="EjNombre">Ej: Alonso Quijano, Castilla La Mancha...</string>
    <string name="EjTipo">Tipo:</string>
    <string name="EjTipoQR">Ej: Fotografía, dibujo, música, vídeo, texto...</string>
    <string name="EjPagina">Página:</string>
    <string name="EjPaginaQR">Ej: 1,2,3,4...</string>
    <string name="EjDescripcion">Descripción</string>
    <string name="EjDescripcionQR">Ej: En un lugar de la mancha de cullo nombre no quiero acordarme...</string>
    <string name="GuardarQR">Guardar</string>
    <string name="txtdPortadaLibro">Portada del libro</string>
    <string name="txtISBN">ISBN</string>
    <string name="txtdISBN">ISBN</string>
    <string name="txtTitulo">Título</string>
    <string name="txtdTitulo">Titulo</string>
    <string name="txtAutor">Autor</string>
    <string name="txtdAutor">Autor</string>
    <string name="txtEditorial">Editorial</string>
    <string name="txtdEditorial">Hola</string>
    <string name="txtAño">Año</string>
    <string name="txtdAño">Año</string>
    <string name="txtIdioma">Idioma</string>
    <string name="txtdIdioma">Idioma</string>
    <string name="txtGenero">Genero</string>
    <string name="txtdGenero">Genera</string>
    <string name="txtSinopsis">Sinópsis</string>
    <string name="txtdSinopsis">Sinopsis</string>
    <string name="txtPdf">PDF</string>
    <string name="btnAnadir">Añadir</string>
    <string name="bgnMainActivity">Fondo de la actividad de inicio de sesión obtenida de la web</string>
    <string name="imgLogoMainActi">Logo de QRBook</string>
    <string name="etEmailMain">Usuario o Email</string>
    <string name="etPasswordMain">Contraseña</string>
    <string name="btnInicioSesion">Iniciar Sesión</string>
    <string name="btnRegistrarseMain">Registrarse</string>
    <string name="imgButtonPerfil">Foto de perfil</string>
    <string name="etHintUsuario">Usuario</string>
    <string name="etHintNombreUsuario">Nombre</string>
    <string name="etHintApellido1">Apellido 1</string>
    <string name="etHintApellido2">Apellido 2</string>
    <string name="tvTextCambiarContraseña">Cambiar contraseña</string>
    <string name="etHintAntiguaContra">Antigua</string>
    <string name="etHintNuevaContra">Nueva</string>
    <string name="etHintNuevaContraseña">Repetir nueva</string>
    <string name="btnRealizarCambiosUsuario">GUARDAR</string>
    <string name="tvNombreQRAmp">Nombre:</string>
    <string name="tveNombreQRAmp">Nombre</string>
    <string name="tvTipoTituloQrAmp">Tipo:</string>
    <string name="tvTipoQRamp">Tipo</string>
    <string name="tvTextPagina">Pagina</string>
    <string name="tvTituloPagina">Página:</string>
    <string name="tvTituloDescripcion">Descripción</string>
    <string name="tvDescripcionQRamp">Descripción</string>
    <string name="bgnFondoRegistro">Fondo de pantalla oscuro</string>
    <string name="imgFotoRegistro">Imagen de foto de perfil</string>
    <string name="etHintEmailRegistro">Email</string>
    <string name="etUsuarioRegistro">Usuario</string>
    <string name="etContraseñaRegistro">Contraseña</string>
    <string name="etRepetirContraseñaRegistro">Repetir contraseña</string>
    <string name="btnRegistro_Registro">Registrarse</string>
    <string name="logoSplashScreen">Logo de la aplicación QRBook</string>
    <string name="imgPortadaLibroItemLibro">Imagen de la portada del libro</string>
    <string name="tvTituloLibro">Titulo</string>
    <string name="tvAutorItemLibro">Autor</string>
    <string name="btnTituloItemQR">Titulo</string>
</resources>
