<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/userperfil"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <ImageButton
                android:id="@+id/ibUsuario"
                android:layout_width="190dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:background="#00000000"
                android:contentDescription="@string/imgButtonPerfil"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/etUsuarioCam"
                android:layout_width="367dp"
                android:layout_height="39dp"
                android:layout_marginTop="15dp"
                android:autofillHints="Nombre de usuario"
                android:hint="@string/etHintUsuario"
                android:inputType="text"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="367dp"
                android:layout_height="39dp"
                android:layout_marginTop="25dp"
                android:autofillHints="Nombre de usuario"
                android:hint="@string/etHintNombreUsuario"
                android:inputType="text"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/etApellido1"
                android:layout_width="367dp"
                android:layout_height="39dp"
                android:layout_marginTop="25dp"
                android:autofillHints="Primer apellido"
                android:hint="@string/etHintApellido1"
                android:inputType="text"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textStyle="italic" />


            <EditText
                android:id="@+id/etApellido2"
                android:layout_width="367dp"
                android:layout_height="39dp"
                android:layout_marginTop="25dp"
                android:autofillHints="Segundo apellido"
                android:hint="@string/etHintApellido2"
                android:inputType="text"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/tvContraseña"
                android:layout_width="367dp"
                android:layout_height="39dp"
                android:layout_marginTop="25dp"
                android:text="@string/tvTextCambiarContraseña"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="italic|bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etAntiguaContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:autofillHints="Antigua contraseña"
                    android:ems="10"
                    android:hint="@string/etHintAntiguaContra"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textColorHint="#000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:autofillHints="Nueva contraseña"
                    android:ems="10"
                    android:hint="@string/etHintNuevaContra"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textColorHint="#000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etRepiteContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:autofillHints="Repetir nueva contraseña"
                    android:ems="10"
                    android:hint="@string/etHintNuevaContraseña"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textColorHint="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRealizarCambios"
                android:layout_width="282dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="#4F817070"
                android:gravity="center"
                android:text="@string/btnRealizarCambiosUsuario"
                android:textColor="#000" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>